# validr

./: Cargo.toml  readme.md  readme.tpl
src/: error.rs  lib.rs  modifier.rs  modifiers.rs  rule.rs  rules.rs  test.rs  validator.rs
src/helpers/: email.rs  mod.rs  non_control_character.rs
src/wrappers/: mod.rs  modifiers.rs  rules.rs
