[package]
name = "validr"
version = "0.1.0"
authors = ["Tibor Hudik <tibor@barrage.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^3"
actix-http = "^2"
futures-util = "^0.3.5"
serde = { version = "1.0.118", features = ["serde_derive"] }
serde_json = "1.0.60"
validator = { version = "0.12", features = ["phone", "card", "unic"] }
